--- a/public/css/landstyle.css
+++ b/public/css/landstyle.css
@@ -96,7 +96,7 @@
     }
     
     .image-container {
-        flex: 0 1 30%; /* Image takes up 30% of the width, adjust as needed */
+        flex: 0 1 17%; /* Image takes up 30% of the width, adjust as needed */
         display: flex;
         justify-content: flex-end; /* Align image to the right */
         align-items: center;
@@ -120,13 +120,13 @@
     h1.title1{
         color: #f9f5e7;
         text-align: left; 
-        font-size: 67px;
+        font-size: 50px;
         font-family: "Playfair Display", serif;
     }
     h4.title2{
         color: #f9f5e7;
         text-align: left; 
-        font-size: 20px;
+        font-size: 19px;
         font-family: "Playfair Display", serif;
     }
     h1.title4{
@@ -169,6 +169,13 @@
         font-size:2vh;
         margin:0px 0px 0px 0px;
     }
+
+    @media only screen and (width: 1280px) and (height: 800px) {
+        h4.title2 {
+            font-size: 16px;
+        }
+    }
+
     @media (max-width: 768px) {
         .div-1 {
             flex-direction: column; /* Stack image below the text on mobile */
