--- a/public/css/login.css
+++ b/public/css/login.css
@@ -97,6 +97,7 @@
             padding: 12px 15px;
             margin: 8px 0;
             width: 100%;
+            font-size: 14px;
         }
 
         .container {
