--- a/public/css/rdnDash.css
+++ b/public/css/rdnDash.css
@@ -5,12 +5,11 @@ body {
     display: flex;
 }
 .sidebar {
-
+    height: auto;
     width: 200px;
     background-color: #f8f8f8;
     padding: 20px;
     border-right: 1px solid #ccc;
-    height: 100vh;
     background: rgb(249,249,249);
     background: -moz-linear-gradient(90deg, rgba(249,249,249,1) 0%, rgba(15,187,124,1) 56%);
     background: -webkit-linear-gradient(90deg, rgba(249,249,249,1) 0%, rgba(15,187,124,1) 56%);
