--- a/public/css/landstyle.css
+++ b/public/css/landstyle.css
@@ -39,6 +39,13 @@
         gap: 1vh;
         flex-wrap: wrap; /* Allow items to wrap to the next line */
     }
+
+    .flex-container2 {
+        display: flex;
+        justify-content: center;
+        gap: 1vh;
+        flex-wrap: wrap; /* Allow items to wrap to the next line */
+    }
     
     .flex-item {
         margin: 4vh;
@@ -57,12 +64,11 @@
 
     .flex-item2 {
         margin: 4vh;
-        align-items: flex-end;
-
         width: 40vh;
         background-color: #f9f5e7;
         justify-content: center;
-        align-items: center;
+        align-items: left;
+        text-align: left; /* align */
         display: flex;
         flex-direction: column;
         padding: 3vh 3vh 3vh 3vh;
@@ -70,9 +76,17 @@
         border-radius: 20px;
     }
 
-    .items{ /*test*/
-        
-        
+    img.testi {
+        border-radius: 50%;
+        height: 100px;
+      }
+
+    .picture{
+        margin:1vh 1vh 3vh 1vh;
+        display: block;
+        width: 150px;
+        height: auto;
+        transform: translateX(50%);
     }
  
     /* Media query for small screens */
@@ -172,6 +186,7 @@
         font-size:2vh;
         margin:0px 0px 0px 0px;
     }
+    
 
     @media only screen and (width: 1280px) and (height: 800px) {
         h4.title2 {
