--- a/public/css/SignUp.css
+++ b/public/css/SignUp.css
@@ -171,9 +171,9 @@
             font-size: 14px;
             margin-bottom: 20px;
         }
-        .left-panel button {
+        .left-panel a {
             border-radius: 20px;
-            border: 1px solid rgb(0, 0, 0);
+            border: 1px solid rgb(255, 255, 255);
             background: rgb(249,249,249);
             background: linear-gradient(90deg, rgba(249,249,249,1) 1%, rgba(36,173,123,1) 100%);
             color: #202020;
@@ -304,3 +304,8 @@
         span{
             color:red;
         }
+        #login{
+            text-decoration: none;
+            color:black;
+        }
+        
