--- a/public/css/rdnDash.css
+++ b/public/css/rdnDash.css
@@ -32,6 +32,7 @@ font-size: 16px;
 background-color: #bee7c5;
 border-radius: 5px;
 padding:10px;
+box-shadow: 4px 5px #a8a7a7;
 }
 .sidebar a:hover
 {
