--- a/public/css/customerDash.css
+++ b/public/css/customerDash.css
@@ -46,6 +46,11 @@ border-radius: 5px;
 .sidebar a i {
 margin-right: 15px;
 }
+.sidebar a.active {
+    background-color: #599c7b; /* Change background color */
+    color: white; /* Text color when active */
+    box-shadow: 2px 3px #5a5a5a; /* Optional: Adjust the shadow when active */
+}
 .content {
     flex-grow: 1;
     padding: 20px;
