--- a/public/css/SignUp.css
+++ b/public/css/SignUp.css
@@ -144,8 +144,9 @@
             display: flex;
             width: 100%;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            height: 100%;
+            height: 170vh;
         }
+        
         .left-panel {
             background: rgb(249,249,249);
             background: linear-gradient(90deg, rgba(249,249,249,1) 1%, rgba(36,173,123,1) 100%);
@@ -184,7 +185,12 @@
             text-transform: uppercase;
             transition: transform 80ms ease-in;
         }
+        .right-panel{
+            position:relative;
+            top:37vh;
+        }
         form .right-panel {
+           
             padding: 20px;
             width: 100%;
             display: flex;
