--- a/public/css/login.css
+++ b/public/css/login.css
@@ -114,6 +114,11 @@
             min-height: 480px;
         }
 
+        .form-control{
+            width:92%;
+            margin: 2vh;
+        }
+
         .form-container {
             position: absolute;
             top: 0;
