--- a/public/css/login.css
+++ b/public/css/login.css
@@ -5,7 +5,7 @@
         }
 
         body {
-            background: #f6f5f7;
+            
             display: flex;
             justify-content: center;
             align-items: center;
@@ -61,6 +61,7 @@
             color: #202020;
             font-size: 12px;
             font-weight: bold;
+            margin-top: 6vh;
             padding: 12px 45px;
             letter-spacing: 1px;
             text-transform: uppercase;
@@ -120,6 +121,14 @@
             height: 100%;
             transition: all 0.6s ease-in-out;
         }
+        .form-control{
+            width:75%;
+            margin-left:5vh;
+        }   
+        .form-controlt{
+            width:75%;
+            margin-left:5vh;
+        }   
 
         .sign-in-container {
             left: 0;
