--- a/public/css/SignUp.css
+++ b/public/css/SignUp.css
@@ -141,12 +141,15 @@ body {
     align-items: center;
     height: 100vh;
     background-color: #f5f5f5;
+    border: 1px solid black;
+    overflow-y: hidden;
 }
 .container {
     display: flex;
-    width: 100%;
+    width: 60vw;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    height: 170vh;
+    height: 75vh;
+    border: 1px solid black;
 }
 
 .left-panel {
@@ -157,17 +160,18 @@ body {
         rgba(36, 173, 123, 1) 100%
     );
     color: #202020;
-    padding: 40px;
-    width: 20%;
+    width: 30%;
     text-align: center;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin-left: -0.9vw;
 }
 .left-panel img {
-    width: 100px;
+    width: 150px;
     margin-bottom: 32px;
+    height: 150px;
 }
 .left-panel h1 {
     font-weight: bold;
@@ -197,7 +201,8 @@ body {
 }
 .right-panel {
     position: relative;
-    top: 37vh;
+    top: 7vh;
+    margin-left: 2vw;
 }
 form .right-panel {
     padding: 20px;
@@ -209,7 +214,9 @@ form .right-panel {
 
 .form-container2 {
     display: flex;
-    gap: 1vw;
+    gap: 10px;
+    gap: 2.5vw;
+    margin-top: 2vh;
 }
 
 form.right-panel h2 {
@@ -293,6 +300,7 @@ span {
     width: 100%;
     flex-wrap: wrap;
 }
+
 .form-section {
     width: 50%;
     padding: 20px;
@@ -301,7 +309,12 @@ span {
     width: 30%;
 }
 .form-section.diet-program {
-    width: 70%;
+    width: 20vw;
+}
+
+#button-signUp {
+    margin-left: 30vw;
+    margin-top: 2vh;
 }
 
 @media (max-width: 768px) {
