--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,300 +1,335 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Bitter:wght@400;700&family=Playfair+Display:wght@400;700&display=swap");
 
-        * {
-            box-sizing: border-box;
-        }
+* {
+    box-sizing: border-box;
+}
 
-        body {
-            
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-            font-family: 'Montserrat', sans-serif;
-            height: 100vh;
-            margin: -20px 0 50px;
-        }
+body {
+    background: #f6f5f7;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    font-family: "Montserrat", sans-serif;
+    height: 100vh;
+    margin: -20px 0 50px;
+    overflow-y: hidden;
+    padding-top: 15vh;
+}
 
-        h1 {
-            font-size: 32px;
-            font-weight: bold;
-            margin: 0;
-        }
+h1 {
+    font-size: 32px;
+    font-weight: bold;
+    margin: 0;
+}
 
-        h2 {
-            float:left;
-        }
+h2 {
+    float: left;
+}
 
-        h3 {
-            font-size: 19px;
-            font-weight: bold;
-        }
+h3 {
+    font-size: 19px;
+    font-weight: bold;
+}
 
-        .h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
-            margin-top: 19px;
-        }
+.h1,
+.h2,
+.h3,
+.h4,
+.h5,
+.h6,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    margin-top: 19px;
+    font-style: "Playfair Display", serif;
+}
 
-        p {
-            font-size: 14px;
-            font-weight: 100;
-            line-height: 20px;
-            letter-spacing: 0.5px;
-            margin: 20px 0 30px;
-        }
+p {
+    font-size: 14px;
+    font-weight: 100;
+    line-height: 20px;
+    letter-spacing: 0.5px;
+    margin: 25px 0 30px;
+}
 
-        span {
-            font-size: 12px;
-        }
+#space {
+    margin-top: 10vh;
+    margin-bottom: 8vh;
+}
 
-        a {
-            color: #333;
-            font-size: 14px;
-            text-decoration: none;
-            margin: 15px 0;
-        }
+#signInControl {
+    margin-top: -5.5vh;
+}
 
-        button {
-            border-radius: 20px;
-            border: 1px solid rgb(243, 243, 243);
-            background: rgb(249,249,249);
-        background: linear-gradient(90deg, rgba(249,249,249,1) 1%, rgba(36,173,123,1) 100%);
-            color: #202020;
-            font-size: 12px;
-            font-weight: bold;
-            margin-top: 6vh;
-            padding: 12px 45px;
-            letter-spacing: 1px;
-            text-transform: uppercase;
-            transition: transform 80ms ease-in;
-        }
+span {
+    font-size: 12px;
+}
 
-        button:active {
-            transform: scale(0.95);
-        }
+a {
+    color: #333;
+    font-size: 14px;
+    text-decoration: none;
+    margin: 15px 0;
+}
 
-        button:focus {
-            outline: none;
-        }
+button {
+    border-radius: 20px;
+    border: 1px solid rgb(243, 243, 243);
+    background: rgb(249, 249, 249);
+    background: linear-gradient(
+        90deg,
+        rgba(249, 249, 249, 1) 1%,
+        rgba(36, 173, 123, 1) 100%
+    );
+    color: #202020;
+    font-size: 12px;
+    font-weight: bold;
+    padding: 12px 45px;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    transition: transform 80ms ease-in;
+}
 
-        button.ghost {
-            background-color: transparent;
-            border-color: #FFFFFF;
-        }
+button:active {
+    transform: scale(0.95);
+}
 
-        form {
-            background-color: #FFFFFF;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            flex-direction: column;
-            padding: 0 50px;
-            height: 100%;
-            text-align: center;
-        }
+button:focus {
+    outline: none;
+}
 
-        input {
-            background-color: #eee;
-            border: none;
-            padding: 12px 15px;
-            margin: 8px 0;
-            width: 100%;
-            font-size: 14px;
-        }
+button.ghost {
+    background-color: transparent;
+    border-color: #ffffff;
+}
 
-        .container {
-            display: flex;
-            flex-direction: row;
-            background-color: #fff;
-            border-radius: 10px;
-            box-shadow: 0 14px 28px rgba(0,0,0,0.25), 
-                    0 10px 10px rgba(0,0,0,0.22);
-            position: relative;
-            overflow: hidden;
-            width: 768px;
-            max-width: 100%;
-            min-height: 480px;
-        }
+form {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 0 50px;
+    height: 100%;
+    text-align: center;
+}
 
-        .form-container {
-            position: absolute;
-            top: 0;
-            height: 100%;
-            transition: all 0.6s ease-in-out;
-        }
-        .form-control{
-            width:75%;
-            margin-left:5vh;
-        }   
-        .form-controlt{
-            width:75%;
-            margin-left:5vh;
-        }   
+input {
+    background-color: #eee;
+    border: none;
+    padding: 12px 15px;
+    margin: 8px 0;
+    width: 100%;
+    font-size: 14px;
+}
 
-        .sign-in-container {
-            left: 0;
-            width: 50%;
-            z-index: 2;
-        }
+.container {
+    display: flex;
+    flex-direction: row;
+    background-color: #ffffff4e;
+    border-radius: 10px;
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+    position: relative;
+    overflow: hidden;
+    width: 768px;
+    max-width: 100%;
+    min-height: 480px;
+}
 
-        .container.right-panel-active .sign-in-container {
-            transform: translateX(100%);
-        }
+.form-container {
+    position: absolute;
+    top: 0;
+    height: 100%;
+    transition: all 0.6s ease-in-out;
+}
 
-        .sign-up-container {
-            left: 0;
-            width: 50%;
-            opacity: 0;
-            z-index: 1;
-        }
+.sign-in-container {
+    left: 0;
+    width: 50%;
+    z-index: 2;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+}
 
-        .container.right-panel-active .sign-up-container {
-            transform: translateX(100%);
-            opacity: 1;
-            z-index: 5;
-            animation: show 0.6s;
-        }
+#username,
+#password {
+    width: 20vw;
+}
 
-        @keyframes show {
-            0%, 49.99% {
-                opacity: 0;
-                z-index: 1;
-            }
-            
-            50%, 100% {
-                opacity: 1;
-                z-index: 5;
-            }
-        }
+.container.right-panel-active .sign-in-container {
+    transform: translateX(100%);
+}
 
-        .overlay-container {
-            flex: 1;
-            position: absolute;
-            top: 0;
-            left: 50%;
-            width: 50%;
-            height: 100%;
-            overflow: hidden;
-            transition: transform 0.6s ease-in-out;
-            z-index: 100;
-        }
+.sign-up-container {
+    left: 0;
+    width: 50%;
+    opacity: 0;
+    z-index: 1;
+}
 
-        .container.right-panel-active .overlay-container{
-            transform: translateX(-100%);
-        }
+.container.right-panel-active .sign-up-container {
+    transform: translateX(100%);
+    opacity: 1;
+    z-index: 5;
+    animation: show 0.6s;
+}
 
-        .overlay {
-            display: flex;
-            flex-direction: row;
-            background: rgb(249,249,249);
-            background: linear-gradient(90deg, rgba(249,249,249,1) 1%, rgba(36,173,123,1) 100%);
+@keyframes show {
+    0%,
+    49.99% {
+        opacity: 0;
+        z-index: 1;
+    }
 
-            background-repeat: no-repeat;
-            background-size: cover;
-            background-position: 0 0;
-            color: #000000;
-            position: relative;
-            left: -100%;
-            height: 100%;
-            width: 200%;
-            transform: translateX(0);
-            transition: transform 0.6s ease-in-out;
-        }
+    50%,
+    100% {
+        opacity: 1;
+        z-index: 5;
+    }
+}
 
-        .container.right-panel-active .overlay {
-            transform: translateX(50%);
-        }
+.overlay-container {
+    flex: 1;
+    position: absolute;
+    top: 0;
+    left: 50%;
+    width: 50%;
+    height: 100%;
+    overflow: hidden;
+    transition: transform 0.6s ease-in-out;
+    z-index: 100;
+}
 
-        .overlay-panel {
-            flex: 1;
-            position: absolute;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            flex-direction: column;
-            padding: 0 40px;
-            text-align: center;
-            top: 0;
-            height: 100%;
-            width: 50%;
-            transform: translateX(0);
-            transition: transform 0.6s ease-in-out;
-        }
+.container.right-panel-active .overlay-container {
+    transform: translateX(-100%);
+}
 
-        .overlay-left {
-            transform: translateX(-20%);
-        }
+.overlay {
+    display: flex;
+    flex-direction: row;
+    background: rgb(249, 249, 249);
+    background: linear-gradient(
+        90deg,
+        rgba(249, 249, 249, 1) 1%,
+        rgba(36, 173, 123, 1) 100%
+    );
 
-        .container.right-panel-active .overlay-left {
-            transform: translateX(0);
-        }
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 0 0;
+    color: #000000;
+    position: relative;
+    left: -100%;
+    height: 100%;
+    width: 200%;
+    transform: translateX(0);
+    transition: transform 0.6s ease-in-out;
+}
 
-        .overlay-right {
-            right: 0;
-            transform: translateX(0);
-        }
+.container.right-panel-active .overlay {
+    transform: translateX(50%);
+}
 
+.overlay-panel {
+    flex: 1;
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 0 40px;
+    text-align: center;
+    top: 0;
+    height: 100%;
+    width: 50%;
+    transform: translateX(0);
+    transition: transform 0.6s ease-in-out;
+}
 
-        .overlay-right a{
-            border-radius: 20px;
-            border: 1px solid rgb(255, 255, 255);
-            background: rgb(249,249,249);
-        background: linear-gradient(90deg, rgba(249,249,249,1) 1%, rgba(36,173,123,1) 100%);
-            font-size: 12px;
-            font-weight: bold;
-            padding: 12px 45px;
-            letter-spacing: 1px;
-            text-transform: uppercase;
-            transition: transform 80ms ease-in;
-        }
+.overlay-left {
+    transform: translateX(-20%);
+}
 
+.container.right-panel-active .overlay-left {
+    transform: translateX(0);
+}
 
+.overlay-right {
+    right: 0;
+    transform: translateX(0);
+    padding-top: 10vh;
+}
 
-        .container.right-panel-active .overlay-right {
-            transform: translateX(20%);
-        }
+.overlay-right a {
+    border-radius: 20px;
+    border: 1px solid rgb(255, 255, 255);
+    background: rgb(249, 249, 249);
+    background: linear-gradient(
+        90deg,
+        rgba(249, 249, 249, 1) 1%,
+        rgba(36, 173, 123, 1) 100%
+    );
+    font-size: 12px;
+    font-weight: bold;
+    padding: 12px 45px;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    transition: transform 80ms ease-in;
+    margin-top: -5vh;
+}
 
-        .social-container {
-            margin: 20px 0;
-        }
+.container.right-panel-active .overlay-right {
+    transform: translateX(20%);
+}
 
-        .social-container a {
-            border: 1px solid #DDDDDD;
-            border-radius: 50%;
-            display: inline-flex;
-            justify-content: center;
-            align-items: center;
-            margin: 0 5px;
-            height: 40px;
-            width: 40px;
-        }
+.social-container {
+    margin: 20px 0;
+}
 
-        footer {
-            background-color: #222;
-            color: #fff;
-            font-size: 14px;
-            bottom: 0;
-            position: fixed;
-            left: 0;
-            right: 0;
-            text-align: center;
-            z-index: 999;
-        }
+.social-container a {
+    border: 1px solid #dddddd;
+    border-radius: 50%;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 5px;
+    height: 40px;
+    width: 40px;
+}
 
-        footer p {
-            margin: 10px 0;
-        }
+footer {
+    background-color: #222;
+    color: #fff;
+    font-size: 14px;
+    bottom: 0;
+    position: fixed;
+    left: 0;
+    right: 0;
+    text-align: center;
+    z-index: 999;
+}
 
-        footer i {
-            color: red;
-        }
+footer p {
+    margin: 10px 0;
+}
 
-        footer a {
-            color: #3c97bf;
-            text-decoration: none;
-        }
+footer i {
+    color: red;
+}
 
-        /* Mobile styles */
-        /*
+footer a {
+    color: #3c97bf;
+    text-decoration: none;
+}
+
+/* Mobile styles */
+/*
         @media (max-width: 768px) {
             .container {
                 flex-direction: column;
